--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,4 +12,5 @@ jobs:
         uses: actions/checkout@v2
         with:
           github_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          publish_branch: master
           publish_dir: ./public
